--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt-js",
+  "name": "bolt.js",
   "version": "0.1.0",
   "description": "Client-side fuzzy search with a focus on speed and memory efficiency.",
   "homepage": "https://github.com/harrisonlo/Bolt#readme",
