--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "deploy": "cd example && yarn build && gh-pages -d build"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "babel-jest": "^26.5.2",
-    "jest": "^26.5.3"
-  },
-  "directories": {
-    "test": "test"
+    "babel-jest": "24.9.0",
+    "gh-pages": "^3.1.0",
+    "jest": "24.9.0"
   },
   "repository": {
     "type": "git",
