--- a/demo/package.json
+++ b/demo/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "example",
+  "name": "demo",
   "version": "0.1.0",
   "homepage": "https://harrisonlo.github.io/boltsearch",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
