--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boltsearch",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "author": "Harrison Lo",
   "description": "Fuzzy search library with a focus on speed and memory efficiency.",
   "homepage": "https://github.com/harrisonlo/boltsearch#readme",
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "jest",
     "build": "rollup -c",
-    "deploy": "cd example && yarn build && gh-pages -d build"
+    "deploy": "cd demo && yarn build && gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
