--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boltsearch",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "author": "Harrison Lo",
   "description": "Fuzzy search library with a focus on speed and memory efficiency.",
   "homepage": "https://github.com/harrisonlo/boltsearch#readme",
@@ -16,7 +16,8 @@
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "jest": "24.9.0",
-    "rollup": "^2.30.0"
+    "rollup": "^2.30.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "repository": {
     "type": "git",
